Touch sensor & BNO055 Documentation

--- a/MouseForHandicapped/Debug/Makefile
+++ b/MouseForHandicapped/Debug/Makefile
@@ -36,10 +36,12 @@ SUBDIRS :=  \
 ../ECUAL/LED/ \
 ../ECUAL/Mouse \
 ../ECUAL/BNO055 \
+../ECUAL/Touch \
 ../MCAL \
 ../ECUAL \
 ../APP \
 ../MCAL/I2C \
+../MCAL/DIO \
 ../MCAL/TIMER \
 ../MCAL/USB
 
@@ -50,7 +52,9 @@ C_SRCS +=  \
 ../ECUAL/BNO055/BNO055.c \
 ../ECUAL/LED/LED_program.c \
 ../ECUAL/Mouse/Mouse.c \
+../ECUAL/Touch/Touch.c \
 ../main.c \
+../MCAL/DIO/DIO.c \
 ../MCAL/I2C/I2C.c \
 ../MCAL/TIMER/timer.c \
 ../MCAL/USB/oddebug.c \
@@ -69,7 +73,9 @@ APP/App.o \
 ECUAL/BNO055/BNO055.o \
 ECUAL/LED/LED_program.o \
 ECUAL/Mouse/Mouse.o \
+ECUAL/Touch/Touch.o \
 main.o \
+MCAL/DIO/DIO.o \
 MCAL/I2C/I2C.o \
 MCAL/TIMER/timer.o \
 MCAL/USB/oddebug.o \
@@ -81,7 +87,9 @@ APP/App.o \
 ECUAL/BNO055/BNO055.o \
 ECUAL/LED/LED_program.o \
 ECUAL/Mouse/Mouse.o \
+ECUAL/Touch/Touch.o \
 main.o \
+MCAL/DIO/DIO.o \
 MCAL/I2C/I2C.o \
 MCAL/TIMER/timer.o \
 MCAL/USB/oddebug.o \
@@ -93,7 +101,9 @@ APP/App.d \
 ECUAL/BNO055/BNO055.d \
 ECUAL/LED/LED_program.d \
 ECUAL/Mouse/Mouse.d \
+ECUAL/Touch/Touch.d \
 main.d \
+MCAL/DIO/DIO.d \
 MCAL/I2C/I2C.d \
 MCAL/TIMER/timer.d \
 MCAL/USB/oddebug.d \
@@ -105,7 +115,9 @@ APP/App.d \
 ECUAL/BNO055/BNO055.d \
 ECUAL/LED/LED_program.d \
 ECUAL/Mouse/Mouse.d \
+ECUAL/Touch/Touch.d \
 main.d \
+MCAL/DIO/DIO.d \
 MCAL/I2C/I2C.d \
 MCAL/TIMER/timer.d \
 MCAL/USB/oddebug.d \
@@ -154,7 +166,21 @@ ECUAL/Mouse/Mouse.o: ../ECUAL/Mouse/Mouse.c
 	@echo Finished building: $<
 	
 
+ECUAL/Touch/Touch.o: ../ECUAL/Touch/Touch.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./main.o: .././main.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+MCAL/DIO/DIO.o: ../MCAL/DIO/DIO.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
