speed levels updated

--- a/MouseForHandicapped/Debug/Makefile
+++ b/MouseForHandicapped/Debug/Makefile
@@ -36,6 +36,7 @@ SUBDIRS :=  \
 ../ECUAL/LED/ \
 ../ECUAL/Mouse \
 ../ECUAL/BNO055 \
+../ECUAL/Delay \
 ../ECUAL/Touch \
 ../MCAL \
 ../ECUAL \
@@ -49,6 +50,7 @@ SUBDIRS :=  \
 C_SRCS +=  \
 ../APP/App.c \
 ../ECUAL/BNO055/BNO055.c \
+../ECUAL/Delay/Delay.c \
 ../ECUAL/LED/LED_program.c \
 ../ECUAL/Mouse/Mouse.c \
 ../ECUAL/Touch/Touch.c \
@@ -69,6 +71,7 @@ ASM_SRCS +=
 OBJS +=  \
 APP/App.o \
 ECUAL/BNO055/BNO055.o \
+ECUAL/Delay/Delay.o \
 ECUAL/LED/LED_program.o \
 ECUAL/Mouse/Mouse.o \
 ECUAL/Touch/Touch.o \
@@ -82,6 +85,7 @@ MCAL/USB/usbdrvasm.o
 OBJS_AS_ARGS +=  \
 APP/App.o \
 ECUAL/BNO055/BNO055.o \
+ECUAL/Delay/Delay.o \
 ECUAL/LED/LED_program.o \
 ECUAL/Mouse/Mouse.o \
 ECUAL/Touch/Touch.o \
@@ -95,6 +99,7 @@ MCAL/USB/usbdrvasm.o
 C_DEPS +=  \
 APP/App.d \
 ECUAL/BNO055/BNO055.d \
+ECUAL/Delay/Delay.d \
 ECUAL/LED/LED_program.d \
 ECUAL/Mouse/Mouse.d \
 ECUAL/Touch/Touch.d \
@@ -108,6 +113,7 @@ MCAL/USB/usbdrvasm.d
 C_DEPS_AS_ARGS +=  \
 APP/App.d \
 ECUAL/BNO055/BNO055.d \
+ECUAL/Delay/Delay.d \
 ECUAL/LED/LED_program.d \
 ECUAL/Mouse/Mouse.d \
 ECUAL/Touch/Touch.d \
@@ -140,6 +146,13 @@ APP/App.o: ../APP/App.c
 	
 
 ECUAL/BNO055/BNO055.o: ../ECUAL/BNO055/BNO055.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+ECUAL/Delay/Delay.o: ../ECUAL/Delay/Delay.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
